--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Cocktails App</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" />
+    <!-- <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" /> -->
     <link href="style.css" rel="stylesheet" />
   </head>
 
